# keystroke

./: README.md  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  uno.config.ts  unocss.config.ts  vite.config.ts
.github/workflows/: release.yaml
src/: main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: listen_key.rs  main.rs
src-tauri/src/app/: key.rs  listen_key.rs  menu.rs  mod.rs
src-tauri/src/listen_key/: utils.rs
src/components/: Greet.vue
src/composables/: settings.ts
src/pages/: Index.vue  about.vue  index.vue  setting.vue
